--- a/chapter6.tex
+++ b/chapter6.tex
@@ -15,10 +15,10 @@ The Property Management \& Investor Portfolio sprint focuses on establishing com
 \subsection{Analysis}
 \subsubsection{Use Case Diagram}
 The combined property management and portfolio system serves multiple actors within the Korpor ecosystem, including real estate agents, administrators, property owners, and investors.
-
+\newpage
 \begin{figure}[htbp]
     \centering
-    % \includegraphics[width=0.8\textwidth]{images/property_portfolio_use_case.png}
+    \includegraphics[width=0.7\textwidth]{images/property_portfolio_use_case.png}
     \caption{Property Management \& Investor Portfolio Use Case Diagram}
     \label{fig:property-portfolio-use-case}
 \end{figure}
@@ -63,23 +63,24 @@ The combined property management and portfolio system serves multiple actors wit
     \label{tab:investor-portfolio-use-case}
 \end{table}
 
+\newpage
 \subsection{Modeling}
 \subsubsection{Class Diagram}
 The property management and portfolio system follows object-oriented design principles with entities for properties, listings, investments, and analytics operations.
 
 \begin{figure}[htbp]
     \centering
-    % \includegraphics[width=0.9\textwidth]{images/property_portfolio_class_diagram.png}
+    \includegraphics[width=0.9\textwidth]{images/property_portfolio_class_diagram.png}
     \caption{Property Management \& Investor Portfolio Class Diagram}
     \label{fig:property-portfolio-class}
 \end{figure}
 
 \subsubsection{Sequence Diagram}
 The interaction sequence demonstrates the flow between user interface, backend services, and database operations for both property management and portfolio tracking operations.
-
+\newpage
 \begin{figure}[htbp]
     \centering
-    % \includegraphics[width=1\textwidth]{images/property_portfolio_sequence.png}
+    \includegraphics[width=1\textwidth]{images/property_portfolio_sequence.png}
     \caption{Property Management \& Investor Portfolio Sequence Diagram}
     \label{fig:property-portfolio-sequence}
 \end{figure}
@@ -122,19 +123,11 @@ The Property Management \& Investor Portfolio sprint successfully delivered comp
             \item Successfully implemented full CRUD operations for properties
             \item Portfolio analytics engine works accurately
             \item Integrated property and portfolio management interface
-            \item Real-time investment tracking functions properly
-            \item Interactive visualizations provide excellent insights
-            \item Role-based access control functions across all features
         \end{itemize} \\
         \hline
         \textbf{Action Items} & 
         \begin{itemize}
-            \item Implement advanced property comparison features
-            \item Add predictive portfolio modeling capabilities
-            \item Enhance property analytics and reporting integration
             \item Implement portfolio rebalancing recommendations
-            \item Add bulk property import/export functionality
-            \item Integrate with external financial planning tools
         \end{itemize} \\
         \hline
     \end{tabular}
